# realsense_sdk

samples/src/playback_sync_sample/: CMakeLists.txt  main.cpp
samples/src/record_sync_sample/: CMakeLists.txt  main.cpp
